fixed menu on mobile

--- a/about.css
+++ b/about.css
@@ -20,7 +20,7 @@
     justify-content: space-between;
     padding: 10px;
     margin-bottom: 30px;
-    position: relative;
+    /* position: relative; */
 }
 
 .information {
@@ -152,16 +152,16 @@
     .hero {
         height: 100vh;
     }
-    .sub-section {
+    /* .sub-section {
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: 5%;
         margin-top: -40vh !important;
         padding: 80px;
-        top: -10%; /* Move the sub-section up by adjusting this value */
-        transform: translateY(-20%); /* Center the sub-section vertically */
-    }
+        top: -10%;
+        transform: translateY(-20%);
+    } */
 
     .information {
         width: 100%;
@@ -181,13 +181,13 @@
         margin: 0 auto;
     }
 
-    .button-contact{
+    /* .button-contact{
         position: absolute;
-        top: 75%; /* Adjust this value to move the button higher or lower */
+        top: 75%;
         left: 50%;
         transform: translateX(-50%);
 
-    }
+    }  */
 
     .logo {
         height: 80px;
